--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,8 @@
     <property name="fitnesseRoot" value="FitNesseRoot"/>
 	<property name="results.dir" location="test-results"/>
 	<property name="dist.dir" location="plugins/processtesterslim"/>
+	<property name="dist.jar" value="processtesterslim.jar"/>
+	<property name="acceptance.test" value="PlugIns.ProcessTesterSlim?test"/>
 	<property name="port" value="8001"/>
 
   
@@ -22,6 +24,12 @@
 		</fileset>
 	</path>
 	
+    <path id="run-classpath">
+		<fileset dir="${dist.dir}">
+			<include name="fitnesse-standalone.jar"/>
+			<include name="${dist.jar}"/>
+		</fileset>
+	</path>
 			
 	<target name="build" depends="acceptance_tests" description="clean, compile and test"/>
   	
@@ -37,7 +45,7 @@
 	  -->
 	<target name="jar" depends="clean, compile, post-compile" description="generate the jar file">
 		<defaultexcludes remove="**/.gitignore"/>
-		<delete file="${dist.dir}/processtesterslim.jar" />
+		<delete file="${dist.dir}/${dist.jar}" />
 
 		<jar jarfile="${dist.dir}/processtesterslim.jar" basedir="${classes.dir}">
             <include name="six42/fitnesse/processtesterslim/**"/>
@@ -57,6 +65,7 @@
 
     <target name="compile"  description="compile java sources">
         <mkdir dir="${classes.dir}" />
+        <mkdir dir="${dist.dir}" />
         <javac srcdir="${src.dir}" destdir="${classes.dir}"  debug="true" source="1.6" target="1.6" includeantruntime="false">
             <include name="six42/fitnesse/processtesterslim/*.java"/>
 			<classpath refid="slim-classpath"/>
@@ -66,23 +75,35 @@
     <target name="post-compile" depends="stamp-version" description="post-compile steps, use those in your IDE" />
 
 	<target name="acceptance_tests" depends="jar">
-		<java jar="${dist.dir}/fitnesse-standalone.jar" failonerror="true" fork="true">
+		<java classname="fitnesseMain.FitNesseMain" failonerror="true" fork="true">
 			<arg value="-c" />
-			<arg value="PlugIns.ProcessTesterSlim?test&amp;format=text" />
+			<arg value="${acceptance.test}&amp;format=text" />
+			<classpath refid="run-classpath"/>
 		</java>
 	</target>
 	<target name="acceptance_tests_xml" depends="jar">
-		<java jar="${dist.dir}/fitnesse-standalone.jar" failonerror="true" fork="true" output="fitnesse-results.xml">
+		<java classname="fitnesseMain.FitNesseMain" failonerror="true" fork="true" output="fitnesse-results.xml">
 			<arg value="-c" />
-			<arg value="PlugIns.ProcessTesterSlim?test&amp;format=xml" />
+			<arg value="${acceptance.test}&amp;format=xml" />
+			<classpath refid="run-classpath"/>
 		</java>
 	</target>
-        <target name="acceptance_tests_html" depends="jar">
-                <java jar="${dist.dir}/fitnesse-standalone.jar" failonerror="true" fork="true" output="fitnesse-results.html">
-                        <arg value="-c" />
-                        <arg value="PlugIns.ProcessTesterSlim?test&amp;format=html" />
+	<target name="acceptance_tests_html" depends="jar">
+		<java classname="fitnesseMain.FitNesseMain" failonerror="true" fork="true" output="fitnesse-results.html">
+			<arg value="-c" />
+			<arg value="${acceptance.test}&amp;format=html" />
+			<classpath refid="run-classpath"/>
+		</java>
+	</target>
+
+        <target name="run" depends="jar">
+		<java classname="fitnesseMain.FitNesseMain" failonerror="true" fork="true">
+					<arg value="-p" />
+					<arg value="${env.FITNESSE_TEST_PORT}"/>
+			<classpath refid="run-classpath"/>
                 </java>
         </target>
+
 	<target name="set-version-if-not-manualy-set" unless="version">
 		<tstamp />
 		<property name="version" value="${DSTAMP}" />
